# movie-recommender-agent

./: .env.example  CONTRIBUTING.md  Dockerfile.agent  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build-and-push.yml
docs/: index.md  modules.md
movie_recommender_agent/: __init__.py  __main__.py  __version__.py  agent_config.json  main.py
movie_recommender_agent/skills/movie-recommender/: skill.yaml
tests/: test_main.py
